# aigit

./: .env.test.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
.qlty/: qlty.toml
ai_git_utils/: __init__.py  ai_model.py  cli.py  config_manager.py  git_operations.py  main.py  utils.py
ai_git_utils/cli/: __init__.py  app.py  commit.py  diff.py  log.py  model.py  version.py
ai_git_utils/models/: __init__.py  commit_message.py  config.py
ai_git_utils/services/: __init__.py  ai_service.py  commit_service.py  prompt_builder.py
aigit/: cli.py  config_manager.py  git_operations.py  main.py  utils.py
plans/: refactoring_plan.md  refactoring_summary.md
tests/: __init__.py  conftest.py
tests/fixtures/: ai_fixtures.py  config_fixtures.py
tests/integration/: test_commit_workflow.py  test_diff_command.py  test_log_command.py  test_model_management.py
tests/unit/: test_config_manager.py  test_git_operations.py  test_utils.py  test_utils_additional.py
tests/unit/test_cli/: __init__.py  test_commit.py  test_diff.py  test_model.py  test_version.py
tests/unit/test_models/: __init__.py  test_commit_message.py  test_config.py
tests/unit/test_services/: __init__.py  test_ai_service.py  test_commit_service.py  test_prompt_builder.py
