[project]
name = "ai_git_utils"
version = "0.4.0"
description = "AI git utils is an intelligent Git commit assistant that leverages AI to enhance your Git workflow."
keywords = ["git", "ai", "aigit"]
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
maintainers = [
    { name = "curry tang", email = "twn39@163.com" }
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.16.0",
    "gitpython>=3.1.44",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "openai>=1.97.0",
]

readme = "README.md"
requires-python = ">= 3.11"

[project.urls]
"Homepage" = "https://github.com/twn39/aigit"
"Documentation" = "https://github.com/twn39/aigit"
"Repository" = "https://github.com/twn39/aigit"
"Source Code" = "https://github.com/twn39/aigit"

[project.scripts]
aigit = "ai_git_utils.main:app"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ai_git_utils"]
