[project]
name = "ai_git_utils"
version = "0.5.2"
description = "AI git utils is an intelligent Git commit assistant that leverages AI to enhance your Git workflow."
keywords = [
    "git",
    "ai",
    "aigit",
    "commit",
    "automation",
    "llm",
    "openai",
    "cli",
    "productivity",
    "developer-tools",
]
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
maintainers = [
    { name = "curry tang", email = "twn39@163.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.21.1",
    "gitpython>=3.1.46",
    "rich>=14.3.2",
    "openai>=2.17.0",
]

readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">= 3.10"

[project.urls]
"Homepage" = "https://github.com/twn39/aigit"
"Documentation" = "https://github.com/twn39/aigit"
"Repository" = "https://github.com/twn39/aigit"
"Source Code" = "https://github.com/twn39/aigit"
"Bug Tracker" = "https://github.com/twn39/aigit/issues"

[project.scripts]
aigit = "ai_git_utils.main:app"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ai_git_utils"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "responses>=0.25.0",
    "freezegun>=1.5.0",
    "python-dotenv>=1.0.0",
    "pip>=25.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=ai_git_utils",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_git: Tests that require git",
    "requires_ai: Tests that require AI API",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.coverage.run]
source = ["ai_git_utils"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
